# NHA-4-096

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.py  modal_app.py  pyproject.toml  requirements.txt  schemas.py  server.py  users.json
frontend/: app.js  index.html
frontend/pages/: chat.js  dashboard.js  login.js  pricing.js  signup.js
images/: desktop.ini
modules/: database.py  embeddings.py  ingest.py  llm_handler.py  retrieval.py  transcribe.py  vision.py
presentation/: VidEx_Defense_Final.pptx
tests/: conftest.py  test_chunking.py  test_ingest.py  test_schemas.py
