[project]
name = "videx"
version = "0.1.0"
description = "VidEx — Multimodal RAG-based Educational Video Assistant"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.5.1",
    "openai-whisper==20250625",
    "transformers==4.44.0",
    "sentence-transformers==3.0.1",
    "yt-dlp>=2026.06.09",
    "gdown==5.2.0",
    "opencv-python==4.10.0.84",
    "qdrant-client==1.10.1",
    "streamlit==1.37.0",
    "pillow==10.4.0",
    "requests==2.32.3",
    "pydub==0.25.1",
    "python-dotenv>=1.0.1",
    "numpy>=1.26.0,<2.0.0",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "kaggle>=2.2.3",
    "modal>=1.5.1",
    "fastapi>=0.139.0",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]
